// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/clickable.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider css-dev-only-do-not-override-1etm4mv ant-divider-horizontal" role="separator">
    <!---->
  </div>
  <div class="ant-steps ant-steps-vertical css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/customized-progress-dot.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><!----><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><!----><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><!----><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><!----><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">You can hover on the dot.</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/error.vue correctly 1`] = `
<div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-next-error">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-error ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="close" class="anticon anticon-close ant-steps-error-icon"><svg focusable="false" class="" data-icon="close" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/icon.vue correctly 1`] = `
<div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Login
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Verification
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Pay
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Done
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/inline.vue correctly 1`] = `
<div class="ant-list ant-list-split css-dev-only-do-not-override-1etm4mv">
  <!---->
  <!---->
  <div class="ant-spin-nested-loading css-dev-only-do-not-override-1etm4mv">
    <!---->
    <div class="ant-spin-container">
      <ul class="ant-list-items">
        <li class="ant-list-item">
          <div class="ant-list-item-meta">
            <div class="ant-list-item-meta-avatar"><span class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1etm4mv"><img src="https://joeschmoe.io/api/v1/random"></span></div>
            <div class="ant-list-item-meta-content">
              <h4 class="ant-list-item-meta-title"><a href="https://www.antdv.com/">Ant Design Title 1</a></h4>
              <div class="ant-list-item-meta-description">Ant Design, a design language for background applications, is refined by Ant UED Team</div>
            </div>
          </div>
          <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot ant-steps-inline css-dev-only-do-not-override-1etm4mv" style="margin-top: 8px;">
            <!---->
            <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 1
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 1.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-wait">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 2
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 2.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-wait">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 3
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 3.</div>
                </div>
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </li>
        <li class="ant-list-item">
          <div class="ant-list-item-meta">
            <div class="ant-list-item-meta-avatar"><span class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1etm4mv"><img src="https://joeschmoe.io/api/v1/random"></span></div>
            <div class="ant-list-item-meta-content">
              <h4 class="ant-list-item-meta-title"><a href="https://www.antdv.com/">Ant Design Title 2</a></h4>
              <div class="ant-list-item-meta-description">Ant Design, a design language for background applications, is refined by Ant UED Team</div>
            </div>
          </div>
          <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot ant-steps-inline css-dev-only-do-not-override-1etm4mv" style="margin-top: 8px;">
            <!---->
            <div class="ant-steps-item ant-steps-item-finish ant-steps-next-error">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 1
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 1.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-error ant-steps-item-active">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 2
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 2.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-wait">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 3
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 3.</div>
                </div>
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </li>
        <li class="ant-list-item">
          <div class="ant-list-item-meta">
            <div class="ant-list-item-meta-avatar"><span class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1etm4mv"><img src="https://joeschmoe.io/api/v1/random"></span></div>
            <div class="ant-list-item-meta-content">
              <h4 class="ant-list-item-meta-title"><a href="https://www.antdv.com/">Ant Design Title 3</a></h4>
              <div class="ant-list-item-meta-description">Ant Design, a design language for background applications, is refined by Ant UED Team</div>
            </div>
          </div>
          <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot ant-steps-inline css-dev-only-do-not-override-1etm4mv" style="margin-top: 8px;">
            <!---->
            <div class="ant-steps-item ant-steps-item-finish">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 1
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 1.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-finish">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 2
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 2.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 3
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 3.</div>
                </div>
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </li>
        <li class="ant-list-item">
          <div class="ant-list-item-meta">
            <div class="ant-list-item-meta-avatar"><span class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1etm4mv"><img src="https://joeschmoe.io/api/v1/random"></span></div>
            <div class="ant-list-item-meta-content">
              <h4 class="ant-list-item-meta-title"><a href="https://www.antdv.com/">Ant Design Title 4</a></h4>
              <div class="ant-list-item-meta-description">Ant Design, a design language for background applications, is refined by Ant UED Team</div>
            </div>
          </div>
          <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot ant-steps-inline css-dev-only-do-not-override-1etm4mv" style="margin-top: 8px;">
            <!---->
            <div class="ant-steps-item ant-steps-item-finish">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 1
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 1.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 2
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 2.</div>
                </div>
              </div>
            </div>
            <!---->
            <div class="ant-steps-item ant-steps-item-wait">
              <div role="button" tabindex="0" class="ant-steps-item-container">
                <div class="ant-steps-item-tail">
                  <!---->
                </div>
                <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
                <div class="ant-steps-item-content">
                  <div class="ant-steps-item-title">Step 3
                    <!---->
                  </div>
                  <div class="ant-steps-item-description">This is a Step 3.</div>
                </div>
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </li>
      </ul>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/steps/demo/label-placement.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-with-progress css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon">
          <div class="ant-steps-progress-icon">
            <div role="progressbar" class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default css-dev-only-do-not-override-1etm4mv">
              <div class="ant-progress-inner" style="width: 40px; height: 40px; font-size: 12px;"><svg class="ant-progress-circle" viewBox="0 0 100 100">
                  <!---->
                  <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke-linecap="round" stroke-width="4" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                  <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="1" fill-opacity="0" class="ant-progress-circle-path" style="stroke-dasharray: 180.95573684677208px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                  <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="0" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #52C41A; stroke-dasharray: 0px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                </svg><span class="ant-progress-text"><!----></span></div>
            </div><span class="ant-steps-icon">2</span>
          </div>
        </div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div><br>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-vertical css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/nav.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal ant-steps-navigation css-dev-only-do-not-override-1etm4mv" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1<div title="00:00:05" class="ant-steps-item-subtitle">00:00:05</div>
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2<div title="00:01:02" class="ant-steps-item-subtitle">00:01:02</div>
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3<div title="waiting for longlong time" class="ant-steps-item-subtitle">waiting for longlong time</div>
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal ant-steps-navigation css-dev-only-do-not-override-1etm4mv" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 1
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 2
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 3
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Step 4
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal ant-steps-navigation css-dev-only-do-not-override-1etm4mv" style="margin-bottom: 60px; box-shadow: 0px -1px 0 0 #e8e8e8 inset;">
    <div class="ant-steps-item ant-steps-item-finish ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">finish 1
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">finish 2
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">current process
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait ant-steps-item-disabled">
      <div class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">4</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">wait
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress.vue correctly 1`] = `
<div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal ant-steps-with-progress css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon">
        <div class="ant-steps-progress-icon">
          <div role="progressbar" class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default css-dev-only-do-not-override-1etm4mv">
            <div class="ant-progress-inner" style="width: 40px; height: 40px; font-size: 12px;"><svg class="ant-progress-circle" viewBox="0 0 100 100">
                <!---->
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke-linecap="round" stroke-width="4" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="1" fill-opacity="0" class="ant-progress-circle-path" style="stroke-dasharray: 180.95573684677208px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="0" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #52C41A; stroke-dasharray: 0px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
              </svg><span class="ant-progress-text"><!----></span></div>
          </div><span class="ant-steps-icon">2</span>
        </div>
      </div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<div title="Left 00:00:08" class="ant-steps-item-subtitle">Left 00:00:08</div>
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
<div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal ant-steps-with-progress css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon">
        <div class="ant-steps-progress-icon">
          <div role="progressbar" class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default css-dev-only-do-not-override-1etm4mv">
            <div class="ant-progress-inner" style="width: 32px; height: 32px; font-size: 10.8px;"><svg class="ant-progress-circle" viewBox="0 0 100 100">
                <!---->
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke-linecap="round" stroke-width="4" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="1" fill-opacity="0" class="ant-progress-circle-path" style="stroke-dasharray: 180.95573684677208px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
                <path d="M 50,50 m 0,-48
   a 48,48 0 1 1 0,96
   a 48,48 0 1 1 0,-96" stroke="" stroke-linecap="round" stroke-width="4" opacity="0" fill-opacity="0" class="ant-progress-circle-path" style="stroke: #52C41A; stroke-dasharray: 0px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s;"></path>
              </svg><span class="ant-progress-text"><!----></span></div>
          </div><span class="ant-steps-icon">2</span>
        </div>
      </div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<div title="Left 00:00:08" class="ant-steps-item-subtitle">Left 00:00:08</div>
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/progress-dot.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-vertical ant-steps-dot css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
  <div class="ant-divider css-dev-only-do-not-override-1etm4mv ant-divider-horizontal" role="separator">
    <!---->
  </div>
  <div class="ant-steps ant-steps-vertical ant-steps-dot css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-finish">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Finished
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">In Progress
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description. This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span class="ant-steps-icon-dot"></span></span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Waiting
            <!---->
          </div>
          <div class="ant-steps-item-description">This is a description.</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/simple.vue correctly 1`] = `
<div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">
          <!---->
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<div title="Left 00:00:08" class="ant-steps-item-subtitle">Left 00:00:08</div>
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/small-size.vue correctly 1`] = `
<div class="ant-steps ant-steps-horizontal ant-steps-small ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/step-next.vue correctly 1`] = `
<div>
  <div class="ant-steps ant-steps-horizontal ant-steps-label-horizontal css-dev-only-do-not-override-1etm4mv">
    <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">1</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">First
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Second
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
    <div class="ant-steps-item ant-steps-item-wait">
      <div role="button" tabindex="0" class="ant-steps-item-container">
        <div class="ant-steps-item-tail">
          <!---->
        </div>
        <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
        <div class="ant-steps-item-content">
          <div class="ant-steps-item-title">Last
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div class="steps-content">First-content</div>
  <div class="steps-action"><button class="css-dev-only-do-not-override-1etm4mv ant-btn ant-btn-primary" type="button">
      <!----><span>Next</span>
    </button>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical.vue correctly 1`] = `
<div class="ant-steps ant-steps-vertical css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/vertical-small.vue correctly 1`] = `
<div class="ant-steps ant-steps-vertical ant-steps-small css-dev-only-do-not-override-1etm4mv">
  <div class="ant-steps-item ant-steps-item-finish">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon"><span role="img" aria-label="check" class="anticon anticon-check ant-steps-finish-icon"><svg focusable="false" class="" data-icon="check" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896"><path d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"></path></svg></span></span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-active">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait">
    <div role="button" tabindex="0" class="ant-steps-item-container">
      <div class="ant-steps-item-tail">
        <!---->
      </div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!---->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>
`;
